--- a/src/app/private-inner-project/private-inner-project.component.html
+++ b/src/app/private-inner-project/private-inner-project.component.html
@@ -37,7 +37,12 @@
           <div class="info-row">
             <div class="info-content">
               <ion-chip color="primary">{{ getScopeLabel(project()?.scope || '') }}</ion-chip>
-              <ion-chip class="state-chip">{{ getStateLabel(project()?.state || 'building') | translate }}</ion-chip>
+              <ion-chip 
+                class="state-chip" 
+                [class.clickable]="isCreator() && canAdvanceState()"
+                (click)="isCreator() && canAdvanceState() ? showStateAdvancementModal() : null">
+                {{ getStateLabel(project()?.state || 'building') | translate }}
+              </ion-chip>
             </div>
           </div>
 
