--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -73,7 +73,7 @@
     padding: 0 !important;
 
     .project-description {
-      margin: 0 0 16px;
+      margin: 0 8px;
       font-size: 16px;
       line-height: 1.6;
       font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
