--- a/src/app/public-inner-project/public-inner-project.component.html
+++ b/src/app/public-inner-project/public-inner-project.component.html
@@ -41,6 +41,20 @@
         <ion-card-content class="project-body">
           <p class="project-description">{{ project()?.description }}</p>
           
+          @if (project()?.state === 'implementing') {
+            <div class="implementation-progress">
+              <div class="progress-header">
+                <span class="progress-label">{{ "HOME.IMPLEMENTATION_PROGRESS" | translate }}</span>
+                <span class="progress-percentage">{{ project()?.implementationPercentage || 0 }}%</span>
+              </div>
+              <ion-progress-bar 
+                [value]="(project()?.implementationPercentage || 0) / 100" 
+                color="primary"
+                class="progress-bar">
+              </ion-progress-bar>
+            </div>
+          }
+          
           @if (project()?.state === 'done') {
             <div class="project-completed-message">
               <ion-icon name="checkmark-circle" color="success" size="large"></ion-icon>
