--- a/src/global.scss
+++ b/src/global.scss
@@ -89,7 +89,7 @@ ion-content .inner-scroll {
   --app-text: #ffffff;
   --app-card-background: #2d2d2d;
   --app-card-border: #404040;
-  --app-input-background: #404040;
+  --app-input-background: rgba(0,0,0,0);
   --app-input-border: #555555;
   --app-divider: #404040;
   --app-toolbar-background: #2d2d2d;
